# fastText

./: CMakeLists.txt  Makefile  classification-example.sh  makepair.py
src/: InterplateMain.cc  InterplateModel.cc  InterplateModel.cc.bg  InterplateModel.h  InterplateText.cc  InterplateText.h  Layer.cc  alsmain.cc  alsmodel.cc  alsmodel.h  alstext.cc  alstext.h  args.cc  args.h  dictionary.cc  dictionary.h  docsim.cc  docsim.h  fasttext.cc  fasttext.h  interface.c  interplatemain.cc  interplatemodel.cc  interplatemodel.h  interplatetext.cc  interplatetext.h  layer.cc  layer.h  main.cc  matrix.cc  matrix.h  model.cc  model.h  pairmain.cc  pairmodel.cc  pairmodel.h  pairtext.cc  pairtext.h  utils.cc  utils.h  (+2 more)
src/layer/: Activation.h
